Add 2026-02-12 ops setup and reliability memory notes

--- a/memory/2026-02-12.md
+++ b/memory/2026-02-12.md
@@ -6,3 +6,9 @@
 - Added concrete dataset build spec with schemas, ingestion flow, validation gates, dedupe policy, packaging contract, and CI jobs.
 - Added startup operating rhythm doc with daily/weekly cadence, ownership matrix, KPI and risk review rituals, release rhythm, and explicit tomorrow-morning actions.
 - Updated existing INFI docs to cross-link to new canonical docs for consistency.
+
+## Operational setup + reliability notes
+- Luke requires timed-task reliability with Telegram-first updates (start/milestone/completion in chat, dashboard secondary).
+- Added/confirmed Gateway cron workflows: hourly ops updates, Discord suggestions digest cadence, daily social analytics, nightly deep-work kickoff, and weekday 3:30 PM report.
+- Installed Homebrew on host (linuxbrew) and initialized shell environment for future plugin/tool dependencies.
+- Discord integration is active with mixed channel types; forum channels (e.g., suggestions/projects/files) require thread-based reading/triage rather than plain text posting.
