Enable dashboard chat via Netlify function proxy to OpenClaw gateway

--- a/memory/2026-02-12.md
+++ b/memory/2026-02-12.md
@@ -14,4 +14,7 @@
 - Discord integration is active with mixed channel types; forum channels (e.g., suggestions/projects/files) require thread-based reading/triage rather than plain text posting.
 - Luke clarified expectation for “all-night/hours-long” runs: must continue for fixed long durations with checkpoints, not stop early on quality-complete.
 - Tomorrow execution priorities from Luke: continuous school-day operation, hourly Discord + TikTok analytics reporting, morning briefing, today worklist, frequent completion updates, Fused Up website UX/function upgrades + Epic API/tournament integration (repo link pending), INFI AI cloud-base build, firmware RF expansion work, and client prospecting alerts.
+- Fused Up repo confirmed: https://github.com/ghostfirmwareofficial-tech/fused-spark-hub (local clone: `repos/fused-spark-hub`). Netlify deploy fix prepared + committed locally: added `netlify.toml` (build command + publish=dist + Node 20) and SPA redirects (`public/_redirects`), plus `.gitignore` to ignore `.env`. Commit: `717c16f` (pending Luke confirmation to push).
+- INFI AI docs were pushed to GitHub repo: https://github.com/D1Goat0/infi-ai-docs.
+- Luke requested school-day sub-jobs with ~20-minute interval pulses (min 10m if needed); added cron: “Luke School Interval Pulse (every 20 min)” (8am–3:59pm weekdays).
 - Cron schedule was expanded/updated accordingly: hourly ops updates, hourly Discord digest, hourly TikTok/social analytics, weekday 7:00 AM morning briefing, weekday 7:10 AM today plan, every-2-hours progress reminders, and weekday 7:20 AM long school-day execution block (model override: opus).
